@@ -1,4 +1,8 @@
 
+NEXT (TBD)
+----------
+- add `minimum_tile_cover` option to filter dataset not covering a certain amount of the tile.
+
 1.2.11 (2019-09-18)
 -------------------
 - reduce memory footprint of expression tiler
